Adds “ Adjusted Chapter headings and sub-sections”

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1936,9 +1936,10 @@ font-family: 'Oswald', sans-serif;
 
 h3 {
 color:#035157;
-font-weight:400;
+font-weight:300;
 letter-spacing:2px;
 font-family: 'Oswald', sans-serif;
+line-height: 48px;
 }
 }
 
@@ -2293,7 +2294,7 @@ color:#fff;
 text-transform:uppercase;
 
 span {
-font-size:24px;
+font-size:30px;
 letter-spacing:2px;
 font-weight:300;
 display:block;
