adds prototype interactive sticky menu, needs styling

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -93,6 +93,7 @@ License URI: http://themeforest.net/licenses/regular-extended
 @import "primary-menu.scss";
 @import "vertical-tabs.scss";
 @import "modals.scss";
+@import "interactive.scss";
 
 body {
 color: $darkcolor;
