--- a/css/style.css
+++ b/css/style.css
@@ -2230,6 +2230,41 @@ button:active:hover {
 .imageZoom:hover {
   cursor: pointer; }
 
+.intro .figure-nav {
+  z-index: 10 !important; }
+  .intro .figure-nav a {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: #15A6B7;
+    border: 0;
+    color: white; }
+    .intro .figure-nav a:hover {
+      background-color: #135257;
+      border: 0; }
+    .intro .figure-nav a.spy-current {
+      background-color: #135257; }
+
+.spy-group {
+  padding-top: 100px;
+  margin-top: -100px; }
+
+.figure {
+  margin-bottom: 30px; }
+  .figure .figure-title {
+    border-bottom: 1px solid gray;
+    margin-bottom: 20px;
+    padding-bottom: 20px; }
+  .figure .figure-sidebar h5 {
+    color: #D24A30;
+    font-size: 16px;
+    margin-bottom: 6px;
+    border-bottom: 1px solid #cecece;
+    padding-bottom: 6px;
+    font-family: 'Open Sans',sans-serif; }
+  .figure .figure-sidebar ul {
+    font-size: 14px;
+    margin-bottom: 20px; }
+
 body {
   color: #333333; }
 
