--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1780,7 +1780,7 @@ z-index: 999;
 }
 }
 
-.next {
+.next-wrap {
 position:relative;
 font-size:18px;
 color:#fff;
@@ -2405,6 +2405,12 @@ margin-bottom:40px;
 
 .vid-wrap {
 margin-bottom:50px;
+}
+
+.carousel-wrap {
+	position: relative;
+    /* display: block; */
+    height: 500px;
 }
 
 /*  TERRELL'S SECTION--CHAPTER 4
