Adds “Chapter 3 Interaction”

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2410,8 +2410,19 @@ margin-bottom:50px;
 .carousel-wrap {
 	position: relative;
     /* display: block; */
-    height: 500px;
+    height: 565px;
 }
+
+.compute >img {
+	    padding: 0 0 15px 0;
+    margin: 0 auto;
+    display: block;
+}
+
+.text-slide > b {
+	color:#035157;
+}
+
 
 /*  TERRELL'S SECTION--CHAPTER 4
 -----------------------------------------------------------------------------------*/
