--- a/css/flickity.css
+++ b/css/flickity.css
@@ -19,26 +19,18 @@ html, body {
 }
 
 .carousel-cell {
-  width: 66%;
-  height: 100%;
-  margin-right: 10px;
-  background: #8C8;
-  border-radius: 5px;
-  counter-increment: carousel-cell;
+    width: 66%;
+    height: 100%;
+    margin-right: 10px;
+    /* border-radius: 5px; */
+    counter-increment: carousel-cell;
+    padding: 50px;
+    border-right: 1px solid #c2c2c2;
 }
 
-/* cell number */
-.carousel-cell:before {
-  display: block;
-  text-align: center;
-  content: counter(carousel-cell);
-  line-height: 200px;
-  font-size: 80px;
-  color: white;
-}
 
 .flickity-page-dots {
-  bottom: 40px;
+  bottom: 25px;
 }
 
 
@@ -143,7 +135,6 @@ html, body {
 .flickity-page-dots {
   position: absolute;
   width: 100%;
-  bottom: -25px;
   padding: 0;
   margin: 0;
   list-style: none;
