--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2423,6 +2423,10 @@ margin-bottom:50px;
 	color:#035157;
 }
 
+.desktop > img {
+	box-shadow: 5px 5px #c2c2c2;
+}
+
 
 /*  TERRELL'S SECTION--CHAPTER 4
 -----------------------------------------------------------------------------------*/
