Adds “ New Version Copy Edits”

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2121,11 +2121,13 @@ line-height: 35px;
 }
 
 .wht-lead {
-color:#fff;
-font-family: 'Open Sans', sans-serif;
-line-height: 35px;
-font-size:21px;
-font-weight:lighter;
+color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 40px;
+    font-size: 25px;
+    font-weight: lighter;
+    text-align: left;
+    letter-spacing: 1px;
 }
 
 .content-section {
