--- a/sass/interactive.scss
+++ b/sass/interactive.scss
@@ -3,30 +3,162 @@
 //interactive spyscroll diagram (chapter 2)
 
 .intro .figure-nav{
-	z-index: 10 !important;
+	position: relative;
 
-	a{
-		display:inline-block;
-		padding: 8px 12px;
+	background-color:white;
+	z-index:10;
 
-		background-color: #15A6B7;
-		border:0;
-		color:white;
+	.figure-nav-top{
+		height: 35px;
+		margin-bottom: 20px;
+		margin-left: 50px;
+		margin-right: 50px;
+		background-color: #135257;
+		text-align: center;
 
-		&:hover{
-			background-color: #135257;
-			border:0;
+		span{
+			color: white;
+			line-height: 35px;
+			text-transform:uppercase;
+			font-size: 14px;
+			letter-spacing: 2px;
 		}
+	}
 
-		&.spy-current{
-			background-color: #135257;
+	.figure-nav-curve{
+		position: absolute;
+		width: 50px;
+		height: 100%;
+
+		background-color: #135257;
+
+			&::after{
+				content: '';
+				display: block;
+				position: absolute;
+				width: 20px;
+				height: 20px;
+				top: 50%;
+				margin-top: -10px;
+
+				background-color: white;
+			}
+
+		&.figure-nav-curve-left{
+			left:0;
+			top:0;
+			border-radius: 20px 0 0 20px;
+
+			&::after{
+				right:0;
+				border-radius: 12px 0 0 12px;
+			}
+
+			&::before{
+				content: '';
+				z-index: 2;
+				position: absolute;
+				left: 100%;
+				bottom:0;
+				width: 0;
+				height: 0;
+				border-style: solid;
+				border-width: 18.5px 0 18.5px 10px;
+				border-color: transparent transparent transparent #135257;
+			}
+		}
+		&.figure-nav-curve-right{
+			right:0;
+			top:0;
+			border-radius: 0px 20px 20px 0px;
+
+			&::after{
+				border-radius: 0 12px 12px 0;
+			}
+
+			&::before{
+				content: '';
+				z-index: 2;
+				position: absolute;
+				left: 0;
+				bottom:0;
+				width: 0;
+				height: 0;
+				border-style: solid;
+				border-width: 18.5px 0 18.5px 10px;
+				border-color: transparent transparent transparent #fff;
+			}
+		}
+	}
+	
+	.figure-nav-chevrons
+	{
+		display: flex;
+		margin-left: 50px;
+		margin-right: 50px;
+		padding-right: 2px;
+
+		background-color:white;
+
+		a{
+			display:inline-block;
+			padding: 8px 12px 8px 24px;
+			position: relative;
+			margin-left: 2px;
+			flex-grow:1;
+
+			background-color: #15A6B7;
+			border:0;
+			color:white;
+			text-align: center;
+
+			&:hover{
+				background-color: #135257;
+				border:0;
+				&::after{
+					border-color: transparent transparent transparent #135257;
+				}
+			}
+
+			&.spy-current{
+				background-color: #135257;
+				&::after{
+					border-color: transparent transparent transparent #135257;
+				}
+			}
+
+			&::before{
+				content: '';
+				z-index: 1;
+				position: absolute;
+				left: 0;
+				top:0;
+				width: 0;
+				height: 0;
+				border-style: solid;
+				border-width: 17.5px 0 17.5px 10px;
+				border-color: transparent transparent transparent #ffffff;
+			}
+
+			&::after{
+				content: '';
+				z-index: 2;
+				position: absolute;
+				left: 100%;
+				top:0;
+				width: 0;
+				height: 0;
+				border-style: solid;
+				border-width: 17.5px 0 17.5px 10px;
+				border-color: transparent transparent transparent #15A6B7;
+			}
 		}
 	}
 }
 
 .spy-group{
-	padding-top: 100px;
-	margin-top: -100px;
+	padding-top: 180px;
+	margin-top: -180px;
 }
 
 .figure{
@@ -42,7 +174,7 @@
 			color: #D24A30;
 			font-size:16px;
 			margin-bottom: 6px;
-			border-bottom: 1px solid #cecece;
+			border-bottom: 1px solid #cecece	;
 			padding-bottom: 6px;
 			font-family: 'Open Sans',sans-serif;
 		}
