--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1789,6 +1789,17 @@ height:300px;
 margin-top: 50px;
 }
 
+.read-next-wrap {
+	/*padding: 50px; */
+    width: 800px;
+    /* text-align: center; */
+    /* top: 50%; */
+    position: absolute;
+    top: 18%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
 .chap-nav {
 text-align:center;
 }
@@ -1803,9 +1814,7 @@ letter-spacing:2px;
 padding:15px 30px;
 display: inline-block;
 position: absolute;
-/* top: 266%; */
 left: 50%;
-/* height: 30%; */
 width: 50%;
 margin: 10% 0 0 -25%;
 @extend .gradientBorder;
@@ -1962,26 +1971,9 @@ background-color: rgba(255, 255, 255, 0.2);
 }
 
 
-/*  TERRELL'S RESPONSIVE
------------------------------------------------------------------------------------*/
 
 
 
-@media screen and (min-width:768px){
-
-.chap-nav a {
-margin: 14% 0 0 -25% !important;
-}
-
-}
-
-@media screen and (min-width:1200px){
-
-.chap-nav a {
-margin: 9% 0 0 -25% !important;
-}
-
-}
 
 
 /*  TERRELL'S CONTACT 
