--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2150,7 +2150,7 @@ font-weight: 400;
 font-family: 'Oswald', sans-serif;
 }
 
-a {
+&>a {
 text-transform:uppercase;
 color:#00a6b6;
 padding:10px 50px;
