--- a/sass/interactive.scss
+++ b/sass/interactive.scss
@@ -111,6 +111,7 @@
 			border:0;
 			color:white;
 			text-align: center;
+			text-transform: uppercase;
 
 			&:hover{
 				background-color: #135257;
