Adds “ Updated 4 rearrangement”

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2417,6 +2417,9 @@ color:#fff;
 position:relative;
 margin-bottom:50px;
 }
+.graphic p {
+	margin-top:20px;
+}
 .divider {
 margin-bottom:40px;
 }
