--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2413,6 +2413,34 @@ position:relative;
 color:#fff;
 }
 
+.booz-bkgd {
+background-color:#253746;
+padding:90px;
+position:relative;
+color:#fff;
+}
+
+.booz-lead {
+	color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    
+    p {
+    line-height: 40px;
+    font-size: 14px;
+    font-weight: lighter;
+    text-align: left;
+    letter-spacing: 2px;
+    line-height: 23px;
+    }
+
+    h5 {
+    font-weight:24px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    letter-spacing: 3px;
+    }
+}
+
 .graphic {
 position:relative;
 margin-bottom:50px;
@@ -3073,7 +3101,7 @@ color: #e1e1e1;
 font-size: 12px;
 padding: 15px;
 text-align: center;
-background-color: #263846;
+background-color: #141f28;
 
 
 span {
