--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4095,7 +4095,7 @@ padding-bottom:30px;
 }
 .about-video-box{
 margin: 0 auto 95px;
-max-height: 420px;
+
 max-width: 635px;
 position: relative;
 width: 100%;
@@ -4104,14 +4104,14 @@ p{
 	font-size: 12px;
 }
 @media(min-width:768px){
-height: 420px;
+
 }
 @media(max-width:767px){
 max-width: 300px;
 }
 .youtube-iframe{
 @media(max-width:767px){
-height: 200px;
+
 }
 }
 
@@ -5807,18 +5807,15 @@ padding-top: 30px;
 			transition: all 0.2s linear;
 
 			&:after{
-				border-bottom: 5px solid $myRed;
 				border: 5px solid transparent; 
 				content: " ";
 				margin-top: -8px;
 				position: absolute;
 				right: 23px;
 				top: 50%;
-				border-bottom:  none;
+				transform: rotate(180deg);
+				border: 5px solid transparent; 
 				border-top: 5px solid #777777;
-				margin-top: -2px;
-				transform: rotate(0deg);
-
 
 			}
 			&.collapsed{
@@ -5826,10 +5823,8 @@ padding-top: 30px;
 				border:1px solid #e1e1e1;
 				color: #777;
 				&:after{
-					border-bottom:  none;
-					border-top: 5px solid #777777;
-					margin-top: -2px;
-					transform: rotate(180deg);
+					
+					transform: rotate(0deg);
 				}
 			}
 			&:hover{
